JEP 451: Prepare to Disallow the Dynamic Loading of Agents